fixed - Testing-only: Create /tmp dir if not already created in CLI test.